--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2"
   }
 }
